<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.geodrivedropbox.HomeActivity" >

    <item
        android:id="@+id/action_confirm"
        android:orderInCategory="50"
        android:title="@string/confirm"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="50"
        android:title="@string/location_all"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_up"
        android:orderInCategory="100"
        android:title="@string/up"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_root"
        android:orderInCategory="100"
        android:title="@string/root"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear"
        app:showAsAction="never"/>

</menu>